--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import 'maps.css';
 @import 'navbar.css';
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
 
@@ -31,9 +32,9 @@ a {
 
 header {
     width: 100%;
-    height: 100vh;
-    background-image: url(images/bg-main.png), url(images/bg-main-secondary.svg);
-    background-size: cover, auto;
+    height: 100dvh;
+    background-image: url(images/bg-main-secondary.svg), url(images/bg-main.png);
+    background-size: auto, cover;
     background-repeat: no-repeat;
     background-position: auto, -2rem left;
     position: relative;
@@ -41,12 +42,16 @@ header {
 
 .header_title {
     position: relative;
-    top: 18rem;
+    top: 14.5rem;
     left: 17rem;
     display: flex;
     align-items: center;
     gap: 1.5rem;
     width: 49rem;
+}
+
+.header_title_logo {
+    width: 25%;
 }
 
 h1 {
@@ -57,4 +62,10 @@ h1 {
 .header_title_sub-title {
     font-size: 1.5rem;
     color: var(--subTitle)
+}
+
+.header_socials {
+    position: relative;
+    bottom: -20rem;
+    left: 5rem;
 }
