--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
     --navBg: hsla(196, 82%, 6%, 0.627);
 }
 
+::selection {
+    background-color: var(--text);
+    color: var(--navBg);
+}
+
 * {
     box-sizing: border-box;
     margin: 0; 
@@ -32,22 +37,23 @@ a {
 
 header {
     width: 100%;
-    height: 100dvh;
+    min-height: 100vh;
+    height: auto;
     background-image: url(images/bg-main-secondary.svg), url(images/bg-main.png);
     background-size: auto, cover;
     background-repeat: no-repeat;
-    background-position: auto, -2rem left;
     position: relative;
 }
 
 .header_title {
     position: relative;
     top: 14.5rem;
-    left: 17rem;
+    left: 7rem;
     display: flex;
     align-items: center;
     gap: 1.5rem;
     width: 49rem;
+    margin-bottom: 29rem;
 }
 
 .header_title_logo {
@@ -66,6 +72,6 @@ h1 {
 
 .header_socials {
     position: relative;
-    bottom: -20rem;
-    left: 5rem;
+    bottom: 0;
+    left: calc(100% - 277px);
 }
