--- a/navbar.css
+++ b/navbar.css
@@ -81,6 +81,101 @@
 }
 
 
+.header_hamburgerBtn {
+    display: none;
+}
+
+.bar1, .bar2, .bar3 {
+    background-image: url(images/menu_bar.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 7px;
+    display: block;
+    margin-bottom: 9px;
+}
+
+@media (max-width: 1000px) {
+
+    .header_hamburgerBtn {
+        z-index: 100;
+        display: block;
+        border: none;
+        background: none;
+        width: 64px;
+        height: 48px;
+        position: fixed;
+        left: calc(100% - 85px);
+        top: 3rem;
+        cursor: pointer;
+    }
+
+    .bar1, .bar3 {
+        transition: 0.3s;
+    }
+
+    .active .bar1 {
+        transform: rotate(-45deg) translate(-14px, 5px);
+    }
+
+    .active .bar2 {
+        opacity: 0;
+    }
+
+    .active .bar3 {
+        transform: rotate(45deg) translate(-16px, -9px);
+    }
+
+    /* .header_hamburgerBtn.active {
+        transform: rotate(-90deg) translate(14px);
+    } */
+
+    .header_main_navbar {
+        display: none;
+        position: fixed;
+        z-index: 99;
+        height: 100dvh;
+        top: 0;
+        right: -50vw;
+        width: 50vw;
+        transition: 0.3s cubic-bezier(.39,.58,.57,1);
+    }
+
+    .header_main_navbar.shown {
+        right: 0;
+    }
+
+    .main_navbar {
+        width: 100%;
+        padding-top: 12rem;
+        padding-left: 2rem;
+        flex-direction: column;
+        gap: 2rem;
+        font-size: 2.5rem;
+        border-radius: 0;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: hsl(197, 81%, 6%);
+        align-items: flex-start;
+    }
+
+    .main_navbar li {
+        display: block;
+    }
+}
+
+@media (max-width:450px) {
+    .header_main_navbar {
+        right: -75vw;
+        width: 75vw;
+    }
+
+
+}
+
+
+
 /* ------------------ */
 
 .back-to-top {
