--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ h1 {
 section {
     width: 100%;
     min-height: 100vh;
-
+    height: auto;
     padding: 5rem;
 }
 
@@ -149,6 +149,10 @@ h2 {
     h1 {
         font-size: 2.2rem;
         font-weight: 300;
+    }
+
+    .about_text {
+        font-size: 1.4rem;
     }
 
     .br_hidden {
