--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header {
     height: auto;
     background-image: url(images/bg-main-secondary.svg), url(images/bg-main.png);
     background-size: auto, cover;
-    background-position-y: 0, -10rem;
+    /* background-position-y: auto, -10rem; */
     background-repeat: no-repeat;
     background-attachment: local, fixed;
     position: relative;
@@ -191,7 +191,7 @@ section {
     min-height: 100dvh;
     height: auto;
     padding: 5rem;
-    z-index: 2;
+    /* z-index: 8; */
 }
 
 /* --------- ABOUT SECTION --------- */
@@ -236,7 +236,7 @@ h2 {
     background-attachment: local, fixed;
     background-position: -10rem 0, center;
     position: relative;
-    z-index: 2;
+    /* z-index: 2; */
 }
 
 .history_title {
@@ -278,14 +278,16 @@ h2 {
     transition: 250ms ease;
 }
 
-.history_chemical::after, .history_liberec::after, .history_barracs::after {
-    font-size: 1.2rem;
-    color: var(--textBasic);
+.history_chemical::after,
+.history_liberec::after,
+.history_barracs::after {
     position: absolute;
     bottom: 7.8rem;
     left: 19rem;
-    width: 6rem;
     display: block;
+    width: 6rem;
+    font-size: 1.2rem;
+    color: var(--text)
 } 
 
  .history_chemical::after {
@@ -317,22 +319,20 @@ h2 {
 }
 
 .history_content {
-    position: absolute;
-    z-index: 4;
+    position: fixed;
+    overflow-y: auto;
+    z-index: 11;
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    width: 90%;
-    height: fit-content;
-    inset: 0;
-    margin: 0 auto;
-    top: 2rem;
+    width: 100%;
+    height: 100%;
+
+    top: 0;
     font-size: 1.6rem;
     line-height: 2.3rem;
-    color: var(--textBasic);
     background-image: linear-gradient(0deg, rgba(15,18,14,1) 0%, rgba(52,61,42,1) 48%, rgba(15,18,14,1) 100%);
     padding: 1.5rem 2.5rem;
-    border-radius: 0.5rem;
     transition: 200ms ease-in-out;
 }
 
@@ -479,6 +479,7 @@ h4 {
 }
 
 .career_swiperItem {
+    /* width: auto; */
     background-image: url(images/career_shape.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -618,18 +619,26 @@ swiper-container {
 
 @media (max-width: 1000px) {
 
+    section {
+        padding: 2rem 3rem;
+    }
+
+    h2 {
+        margin-bottom: 2rem;
+    }
+
     /* --------- MAIN PAGE - HEADER - queries 1000px --------- */
 
     header {
         background-image: url(images/bg-main-secondary-mobile.svg), url(images/bg-main-mobile.png);
         background-size: 130% auto, cover;
-        background-attachment: fixed;
-        background-position: unset;
+        background-attachment: local;
+        /* background-position: center -2rem, center; */
         padding: 2rem 3rem;
     }
 
     .header_hamburgerBtn {
-        z-index: 100;
+        z-index: 11;
         display: block;
         border: none;
         background: none;
@@ -661,7 +670,7 @@ swiper-container {
     .header_main_navbar {
         display: flex;
         position: fixed;
-        z-index: 99;
+        z-index: 10;
         height: 100dvh;
         top: 0;
         right: -50vw;
@@ -736,8 +745,8 @@ swiper-container {
 
     /* --------- ABOUT SECTION - queries --------- */
 
-    section {
-        padding: 2rem 3rem;
+    .about {
+        padding-bottom: 5rem;
     }
 
     .about_container {
@@ -755,8 +764,8 @@ swiper-container {
 
     .history {
         background-image: url(images/shape-about.png), url(images/bg-history.png);
-        background-size: cover;
-        background-position: -1rem, center;
+        background-size: auto,cover;
+        background-position: center top -1rem;
     }
 
     .history_title {
@@ -770,48 +779,56 @@ swiper-container {
     }
 
     .history_selection_container {
-        flex-direction: row;
+        /* flex-direction: row; */
         top: 4rem;
         width: auto;
-        transform: scale(.8);
-    }
-
-    .history_selection_container > * {
-        font-size: 0;
+        gap: 2.5rem;
+        padding-bottom: 5rem;
     }
 
     .history_link {
+        display: block;
         width: 100%;
-        transform: scale(0.8);
-        filter: grayscale(0);
     }
 
-    .history_link:hover {
-        transform: scale(.9);
+
+    .history_link > picture > img {
+        width: 100%;
+        max-width: 30rem;
+        border-radius: .5rem;
     }
 
     .history_link:hover::before {
+        position: absolute;
+        top: 0.6rem;
+        right: calc(49% - 10px);
+
+        width: auto;
+        height: auto;
+
         transform: rotate(-90deg);
-        top: 3.6rem;
-        right: -7.8rem;
     }
 
     .history_chemical::after,
     .history_liberec::after,
     .history_barracs::after {
-        bottom: 20.1rem;
+        position: relative;
+        text-transform: uppercase;
+        top: -2rem;
         left: 0rem;
         width: 100%;
         text-align: center;
-    }
-    
+        font-size: 1rem;
+        background: black;
+        padding: 1rem 0;
+        border-radius: 0 0 .5rem .5rem;
+        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 
-    .history_liberec::after {
-        /* top: -2.2rem; */
     }
 
-    .history_barracs {
+    .history_liberec, .history_barracs {
         margin-top: 0;
+        align-self: unset;
     }
 
     .history_content {
@@ -824,27 +841,17 @@ swiper-container {
         padding-right: 1rem;
      }
  
-             #gallery .mySwiper {
-         width: 100%;
+    #gallery .mySwiper {
+        width: 100%;
      }
  
-             #gallery swiper-container {
-         width: 100%;
-         height: 60vh;
+    #gallery swiper-container {
+        width: 100%;
+        height: 60vh;
      }
 }
 
 @media (max-width: 650px) {
-
-    .history_selection_container {
-        transform: scale(0.6);
-    }
-
-    .history_chemical::after,
-    .history_liberec::after,
-    .history_barracs::after {
-        font-size: 1.6rem;
-    }
 
     #gallery swiper-container {
         width: 100%;
@@ -899,6 +906,7 @@ swiper-container {
 
     .about_text {
         font-size: 1rem;
+        line-height: 1.8rem;
     }
 
     .history_content_title {
@@ -954,6 +962,7 @@ swiper-container {
 .hidden {
     opacity: 0;
     z-index: -10;
+    pointer-events: none;
     /* transition: 150ms ease-in; */
 }
         /* -------- */
