--- a/style.css
+++ b/style.css
@@ -678,6 +678,12 @@ swiper-container {
 
 .footer {
     background-image: url(images/footer-bg.svg);
+    background-color: #1a1e12;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    min-height: 60vh;
+    height: auto;
 }
 
 /* -----media queries------ */
