--- a/maps.css
+++ b/maps.css
@@ -1,91 +1,95 @@
-.socialsmap_header {
+
+.container {
+    transform: scale(0.7);
+    /* background: url(images/socials-svg.svg) center no-repeat; */
+    background-size: contain;
     position: absolute;
+    width: 16rem;
+    height: 16rem;
+    left: 0;
     bottom: 0;
-    left: 57%;
-    transform: translateX(-60%);
-    width: 14rem;
 }
 
-.header_socials {
-    display: block;
-    width: 100%;
+.fb-ig {
+    background: url(images/socials-fb-ig.svg) center no-repeat;
 }
 
-.area {
-    /* background: black; */
-    /* background: rgb(255, 0, 208); */
-    display: block;
-    opacity: 1;
-    position: absolute;
-    border-radius: 100%;
-    /* transition: 200ms ease; */
+.about_socials_container {
+  right: 0;
+  bottom: 0;
+  left: unset;
 }
 
-#area1_header {
-    width: 65px;
-    height: 65px;
-    top: 5.75rem;
-    left: 27.2%;
-    transform: translate(-30.5%);
+.wiki-yt {
+  background: url(images/socials-wiki-yt.svg) center no-repeat;
+  top: 5vh;
+  right: 15vw;
+}
+    
+.fa-facebook-f {
+  font-size: 2rem;
+  color: black;
+}
+    
+.fa-instagram {
+  font-size: 2.7rem;
+  color: black;
 }
 
-#area1_header:hover {
-    background-image: url(images/facebook_hover.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    opacity: 1;
-    transition: scale 200ms ease;
-    scale: 1.1;
+.fa-wikipedia-w {
+  font-size: 1.8rem;
 }
 
-#area2_header {
-    width: 65px;
-    height: 65px;
-    top: 2.6rem;
-    left: 61.4%;
-    transform: translate(-24.4%);
-
+.fa-youtube {
+  font-size: 1.8rem;
 }
 
-#area2_header:hover {
-    background-image: url(images/instagram_hover.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    opacity: 1;
-    transition: scale 200ms ease;
-    scale: 1.1;
+.icons {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  width: 4.6rem;
+  height: 4.6rem;
+  background: #A3BA3D;
+  border-radius: 50%;
+  text-align: center;
+  padding: 2rem;
+  
+}
+    
+.fb, .wiki {
+    top: 7.8rem;
+    left: 2.8rem;
+}
+  
+.ig, .yt {
+    top: 4rem;
+    left: 8.8rem;
 }
 
-#area1_about {
-    position: relative;
-    width: 65px;
-    height: 65px;
-    top: 5.15rem;
-    left: calc(100% - 147.3px);
+.ig, .fb, .ig, .wiki, .yt {
+  transition: 150ms ease;
+}
+    
+.ig:hover,
+.fb:hover,
+.wiki:hover,
+.yt:hover {
+  transform: scale(1.1);
+  background: #5d513e;
+  transition: 150ms ease;
 }
 
-#area1_about:hover {
-    background-image: url(images/wikipedia_hover.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    opacity: 1;
-    transition: 200ms ease;
-    scale: 1.3;
-}
 
-#area2_about {
-    position: relative;
-    width: 65px;
-    height: 65px;
-    top: -2.66rem;
-    left: calc(100% - 50.7px);
-}
+/* .ig:hover .fa-brands, .fb:hover .fa-brands {
+  color: #4F6100;
+}  */
 
-#area2_about:hover {
-    background-image: url(images/youtube_hover.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    opacity: 1;
-    transition: 200ms ease;
-    scale: 1.3;
+@media (max-width: 800px) {
+  .wiki-yt {
+      top: auto;
+      bottom: 5vh;
+    }
 }
