--- a/style.css
+++ b/style.css
@@ -695,7 +695,6 @@ swiper-container {
     list-style: none;
     background: #878b6e54;
     width: 100%;
-    /* height: 3rem; */
     padding: 1rem;
     left: 0;
     display: flex;
@@ -1044,6 +1043,18 @@ swiper-container {
 
     .contact {
         padding: 1rem 1.5rem;
+     }
+
+    .footer_contact_text {
+        font-size: .8rem;
+        line-height: 1.4rem;
+     }
+
+     .fa-location-dot {
+        font-size: 2rem;
+     }
+     .fa-phone {
+        font-size: 1.4rem;
      }
 
 }
